--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										Analysis</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/covid 19.jpeg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p> Anlysis for covid 19 padmindic </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
